Assigned variable names to the three image tags & set styling for the image selection area

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
     
     <main>
         <p>Dear valued employees,</p>
-        <p>Help us choose between our R&D department's list of proposed projects! Vote on which of the 3 displayed products below you think should become our company's next new product brought to market! At the end of every 25 rounds, we will show the percentage of times each proposal was chosen.</p>
+        <p>Our R&D department has been hard at work creating a list of proposed projects!  Help us choose which one to bring to market first! Vote on which of the 3 displayed products you like best as our company's next new product! At the end of every 25 rounds, we will show the percentage of times each proposal was chosen.</p>
         <br>
         <p>Come back a week from now, and we will display the results (in graph form) of you and your co-workers' choices!</p>
         <br>
 
         <h1>Choose your favorite of these three:</h1>
         <section>
+            <img>
             <img>
             <img>
         </section>
