Randomized array, set click counter, & display 3 images on the screen

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 
         <div>View Results</div>
         <ul></ul>
+
+        <div>
+            
+        </div>
     </main>
 
     <footer>&copy; Odd Duck Products</footer>
