Made results button hidden until useable. I think Lab 11 is now finished

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     
     <main>
         <p>Dear valued employees,</p>
-        <p>Our R&D department has been hard at work creating a list of proposed projects!  Help us choose which one to bring to market first! Vote on which of the 3 displayed products you like best as our company's next new product! At the end of every 25 rounds, we will show the percentage of times each proposal was chosen.</p>
+        <p>Our R&D department has been hard at work creating a list of proposed projects!  Help us choose which one to bring to market first! Vote on which of the 3 displayed products you like best as our company's next new product! At the end of every 25 rounds, you will be able to view the number times you voted for each.</p>
         <br>
-        <p>Come back a week from now, and we will display the results (in graph form) of you and your co-workers' choices!</p>
+        <p>Come back a week from now, and we will display the cumulative, final results in graph form!</p>
 
 
         <h1>Choose your favorite of these three:</h1>
@@ -28,8 +28,10 @@
             <img>
         </section>
 
-        <div>View Results</div>
-        <ul></ul>
+        <section>
+            <button type="button" hidden>View Results</button>
+            <ul></ul>
+        </section>
 
     </main>
 
