Fixed a missing word typo in the instructional message to employees

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <main>
         <p>Dear valued employees,</p>
-        <p>Our R&D department has been hard at work creating a list of proposed projects!  Help us choose which one to bring to market first! Vote on which of the 3 displayed products you like best as our company's next new product! At the end of every 25 rounds, you will be able to view the number times you voted for each.</p>
+        <p>Our R&D department has been hard at work creating a list of proposed projects!  Help us choose which one to bring to market first! Vote on which of the 3 displayed products you like best as our company's next new product! At the end of every 25 rounds, you will be able to view the number of times you voted for each.</p>
         <br>
         <p>Come back a week from now, and we will display the cumulative, final results in graph form!</p>
 
