Initial commit of Lab 12 branch

--- a/index.html
+++ b/index.html
@@ -23,15 +23,20 @@
 
         <h1>Choose your favorite of these three:</h1>
         <section>
-            <img>
-            <img>
-            <img>
+            <img src="" alt="first choice">
+            <img src=""  alt="second choice">
+            <img src="" alt="third choice">
         </section>
 
         <section>
             <button type="button" hidden>View Results</button>
             <ul></ul>
         </section>
+
+        <!-- According to lecture, Canvas shows up best inside of a div so...-->
+        <div id="chartContainer">
+            <canvas id="myChart"></canvas>
+        </div>
 
     </main>
 
