--- a/index.html
+++ b/index.html
@@ -35,12 +35,15 @@
 
         <!-- According to lecture, Canvas shows up best inside of a div so...-->
         <div id="chartContainer">
-            <canvas id="myChart"></canvas>
+            <canvas id="myChart">Your browser doesn't support the canvas element</canvas>
         </div>
 
     </main>
 
     <footer>&copy; Odd Duck Products</footer>
+
+    <!-- URL copied from chartjs.org -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
 
     <script src="js/app.js"></script>
 </body>
