--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <!-- According to lecture, Canvas shows up best inside of a div so...-->
         <div id="chartContainer">
-            <canvas id="myChart">Your browser doesn't support the canvas element</canvas>
+            <canvas height="90" id="myChart">Your browser doesn't support the canvas element</canvas>
         </div>
 
     </main>
